--- a/templates/add.html
+++ b/templates/add.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Data Loader</title>
+  <title>Chargement de données</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="shortcut icon" href="{{ url_for('static', filename='images/logo.png')}}" type="image/x-icon">
 </head>
 <body class="bg-gray-100">
   <style>
@@ -18,46 +19,71 @@
     }
   </style>
   <div class="container mx-auto p-6 max-w-3xl">
-    <h1 class="text-3xl font-bold mb-6 text-center">Load New Data</h1>
+    <h1 class="text-3xl font-bold mb-6 text-center">Chargement de nouvelles données</h1>
     
     <!-- Step 1: Upload Text File -->
     <div id="uploadSection" class="bg-white shadow-md rounded-lg p-6">
-      
+      <!-- Error message -->
+      <div id="alert-border-2" class="hidden flex items-center p-4 mb-4 text-red-800 border-t-4 border-red-300 bg-red-50 dark:text-red-400 dark:bg-gray-800 dark:border-red-800" role="alert">
+        <svg class="flex-shrink-0 w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+            <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"/>
+        </svg>
+        <div class="ms-3 text-sm font-medium" id="alertMessage">
+            <!-- error message will be here -->
+        </div>
+        <button type="button" class=" closeAlert ms-auto -mx-1.5 -my-1.5 bg-red-50 text-red-500 rounded-lg focus:ring-2 focus:ring-red-400 p-1.5 hover:bg-red-200 inline-flex items-center justify-center h-8 w-8 dark:bg-gray-800 dark:text-red-400 dark:hover:bg-gray-700"  data-dismiss-target="#alert-border-2" aria-label="Close">
+            <span class="sr-only">Dismiss</span>
+            <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
+            </svg>
+        </button>
+      </div>
+
       <!-- CSV Upload Card -->
-      <div class="bg-white  p-6 flex flex-col h-[280px]">
-        <h2 class="text-xl font-semibold mb-4">Step 1: Upload Text File</h2>
+      <div class="bg-white  p-6 flex flex-col h-[280px] relative">
+        <h2 class="text-xl font-semibold mb-4">Étape 1 : Téléchargement du fichier texte</h2>
         <div class="flex-1 flex flex-col">
             <div class="flex-1 border-2 border-dashed border-gray-300 rounded-lg flex flex-col items-center justify-center p-4 bg-gray-50 hover:bg-gray-100 transition-colors cursor-pointer">
                 <label for="txtFile" class="w-full h-full flex flex-col items-center justify-center cursor-pointer">
                     <svg class="w-8 h-8 mb-2 text-gray-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 16a4 4 0 01-.88-7.903A5 5 0 1115.9 6L16 6a5 5 0 011 9.9M15 13l-3-3m0 0l-3 3m3-3v12" />
                     </svg>
-                    <p class="text-sm text-gray-600 text-center mb-1">Click to upload or drag and drop</p>
-                    <p class="text-xs text-gray-500">TXT file only</p>
+                    <p class="text-sm text-gray-600 text-center mb-1">Cliquer pour télécharger ou glisser-déposer</p>
+                    <p class="text-xs text-gray-500">Fichier TXT uniquement</p>
                 </label>
                 <input type="file" id="txtFile" accept=".txt" class="mb-4 hidden">
             </div>
             <p id="selectedFileName" class="mt-2 text-sm text-gray-600"></p>
             <button id="processButton" type="submit" class="w-full mt-4 bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 transition-colors">
-                Process File
+                Extraction
             </button>
         </div>
+
+        <!-- Back icon -->
+        <div class="absolute top-[-40px] left-[-40px] flex items-center justify-center w-12 h-12 bg-black text-white rounded-full cursor-pointer">
+          <a href="/">
+              <svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path>
+              </svg>
+          </a>
+        </div>
+        
       </div>
 
 
       <!-- Loader -->
       <div id="loader" class="hidden mt-4 text-center">
         <div class="loader ease-linear rounded-full border-4 border-t-4 border-gray-200 h-12 w-12 mx-auto"></div>
-        <p class="text-gray-600 mt-2">Processing file, please wait...</p>
+        <p class="text-gray-600 mt-2">Traitement en cours, veuillez patienter...</p>
       </div>
     </div>
 
 
     <!-- Step 2: Download CSV and Load Data -->
     <div id="resultSection" class="bg-white shadow-md rounded-lg p-6 mt-6 hidden">
-      <h2 class="text-xl font-semibold mb-4">Step 2: Download and Load Data</h2>
-      <button id="downloadCSV" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">Download CSV</button>
-      <button id="loadData" class="bg-blue-500 text-white px-4 py-2 rounded ml-4 hover:bg-blue-600">Load Data to Database</button>
+      <h2 class="text-xl font-semibold mb-4">Étape 2 : Téléchargement et chargement de données</h2>
+      <button id="downloadCSV" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">Télécharger en CSV</button>
+      <button id="loadData" class="bg-blue-500 text-white px-4 py-2 rounded ml-4 hover:bg-blue-600">Charger</button>
     </div>
   </div>
   <script src="{{ url_for('static', filename='js/add.js') }}"></script>
